--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ a:hover{
 	}
 
 /*头部*/
-#header{width: 100%;background: url(../images/header-bg.jpg) top center no-repeat;}
+#header{width: 100%;background: #fff url(../images/header-bg.jpg) top center no-repeat;}
 
 .layer{width:1200px;margin: 0 auto;}
 .head-top{height:254px}
@@ -40,13 +40,31 @@ a:hover{
 .navigation{float: right;width: 692px;margin-bottom:51px;}
 .navigation dl{line-height: 30px;margin-top: 42px;text-align: right;width: 134px;margin-left: 39px;float: left;}
 .navigation dd{color: #2e3037;width: 134px;border-bottom: solid 1px #ededed;margin-bottom: 10px;}
+/*
+.head-bottom{height: 341px;overflow: hidden;}
+.head-bottom img{position: relative; left: 50%; margin-left: -960px;width: 1920px;}
 
-.head-bottom{margin-left: -360px;height: 341px;}
+*/
+.head-buttom .MR0{margin-right: 0px;}
+.head-buttom{background: url(../images/head-bottom-bg.jpg) top center no-repeat;height: 341px; overflow: hidden;}
+.center{width: 1200px;margin: 0 auto; overflow: hidden;}
+.head-buttom ul{margin-top: 70px;float:left;margin-right:28px;}
+.head-buttom li{width: 381px;}
+.head-buttom .big{color: white;border-bottom: 2px #FFFFFF solid;height: 132px;}
+.head-buttom h2{font-size: 31px;font-weight: normal;margin-bottom: 46px;margin-left: 120px;}
+.big strong{display: block;}
+.head-buttom p{color: white;}
+
+
 area{ outline: none;}
 
 /*本体不算ppt*/
-#content{margin-top: 84px;height: 482px;}
-#content .service{float: left;width: 240px;}
+#content{margin-top: 84px;height: 482px;margin-bottom: 83px;overflow: hidden;}
+
+.content-l{float: left;width:240px;background: url(../images/content-service.jpg);height: 480px;}
+.content-l a{margin: 262px 0  0 53px;display: block;}
+.content-l img{border: solid 4px #000000;}
+/*#content .service{float: left;width: 240px;}*/
 .content-r{background: #fff;height: 480px;width:960px;float: right;}
 .content-r ul{margin: 46px 0 0 24px;float: left;}
 .content-r li{width:215px;/*height: 480px;padding: 46px 0 0 24px;*/}
@@ -63,9 +81,49 @@ area{ outline: none;}
 .content-r span{font-size: 15px;margin: 5px 0 16px 0;line-height: 15px;display: block;}
 .content-r dd{line-height: 24px;}
 
+/*ppt*/
+#case{background: #fff; overflow: hidden;}
+.case-head{background: url(../images/case-logo.png) no-repeat 0 120px;;padding-top: 120px;}
+.case-head p{color: #9a9999;line-height: 18px;margin: 63px 0 48px 265px;}
+#case img{position:relative; left: 50%; margin-left: -960px;width: 1920px; height: 700px;}
+.description{margin-top: 11px;margin-bottom:24px;background: url(../images/border-bg.png) no-repeat;height: 42px;color: #000000;padding-top: 40px;padding-left: 28px; }
+
+.mb77{margin-bottom: 77px;}
+
+/*了解我们*/
+#know{/*background: #ededed;*/margin-top:90px;}
+#know .layer{background-color: #FFFFFF;overflow: hidden;}
+#know ul{width: 110%;height: 318px;}
+#know li{width: 398px;height: 318px;float: left;}
+#know .know_1{/*width: 400px;height: 318px;float: left;*/border-right: 1px solid #ededed;}
+.know_1 h3{color: #3a3f54; font-size: 18px; line-height: 30px;text-align: center;margin-top:57px;}
+.know_1 i{font-style: normal;color: #e00000;font-size: 14px;text-align: center;line-height: 14px;display: block;}
+.know_1 p{color: #8a8fa0;width: 322px;line-height: 24px;margin: 0 auto;margin-top: 18px;}
+#know .know_2 {width: 400px;height:318px;background: url(../images/know-phone.jpg) top center;}
+.know_2 h3{color: white; font-size: 18px; line-height: 30px;text-align: center;margin-top:57px;}
+.know_2 span{font-size: 24px;color: white;margin: 43px 0 0 108px;display: block;}
+.know_2 strong{font-size:60px;color: white;display: block;margin:5px 0 0 50px ;line-height: 45px;}
 
 /*联系张小姐滚动条*/
-#role{background: #000000;width:115px;height: 182px;position: fixed;right: 0;top:50%;} 
+
+/*foot*/
+.ml42{margin-left: 42px;}
+.ml53{margin-left: 53px;}
+.ml15{margin-left: 15px;}
+#foot{margin-top: 103px;background: #FFFFFF;height: 321px;color: #000000;}
+#foot .tit{margin-top: 48px;font-weight: bold;color: black;}
+#foot span{color: #e62129;font-weight: normal;}
+#foot p{text-align: center;}
+#foot h4{font-size: 16px;text-align: center;margin-bottom: 20px;}
+#foot .ads{float: left;margin-top:11px;}
+.foot_pane{width: 700px; height: 36px; border: 1px #d8d8d8 solid; margin: 0 auto 19px;}
+#foot label{margin-top: 19px;float: left;}
+#foot .QQ{margin-left: 363px;}
+.ml16{margin-left: 16px;}
+.ml33{margin-left: 33px;}
+
+
+#role{background: #000000;width:115px;height: 182px;position: fixed;left:50%;top:50%;margin-left: 834px;} 
 .role-top{width: 100px;margin: 8px auto 0 ;border-bottom: solid 1px #910202;}
 #role p{line-height: 21px;color: #FFFFFF;margin:0;font-size: 12px;}
 .role-bottom{width: 100px;margin: 0px auto;}
